feat: dynamically get the current context path